--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,9 @@ on:
 
 permissions:
   contents: write
+  pull-requests: write
+  checks: read # For private repositories
+  actions: read # For private repositories
 
 jobs:
   goreleaser:
