--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -16,7 +16,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  tasks:
+  usage:
     runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
@@ -27,9 +27,9 @@ jobs:
         id: step_output
         run: cat dprint.json | gh-action-multiline json >> "$GITHUB_OUTPUT"
       - name: Use product in a before step
-        run: echo "${{ fromJson(steps.step_output.outputs.json).plugins }}"
+        run: test '120' = "${{ fromJson(steps.step_output.outputs.json).prettier.printWidth }}"
       - name: Set the value in bash
         id: step_env
         run: cat dprint.json | gh-action-multiline JSON_TO_TEST >> "$GITHUB_ENV"
       - name: Use product in a before step
-        run: echo "${{ fromJson(env.JSON_TO_TEST).plugins }}"
+        run: test '120' = "${{ fromJson(env.JSON_TO_TEST).prettier.printWidth }}"
