Add E2E like tests in every CI run

--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -4,7 +4,13 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - '**.md'
+      - '*.nix'
   pull_request:
+    paths-ignore:
+      - '**.md'
+      - '*.nix'
 
 jobs:
   build:
@@ -18,6 +24,30 @@ jobs:
           cache-dependency-path: 'go.sum'
       - run: go test
       - run: go build -v -race
+  usage:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version-file: 'go.mod'
+          cache-dependency-path: 'go.sum'
+      - name: Install Task
+        uses: arduino/setup-task@v1
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v4
+        with:
+          install-only: true
+      - run: task build
+      - run: tree dist
+      - run: readlink -f ./dist/gh-action-multiline_linux_amd64_v1 >> "$GITHUB_PATH"
+      - run: cat dprint.json | gh-action-multiline -name=json | tee -a "$GITHUB_OUTPUT"
+        id: have_output
+      - run: test '120' = "${{ fromJson(steps.have_output.outputs.json).prettier.printWidth }}"
   lint:
     runs-on: ubuntu-latest
     steps:
