--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -48,6 +48,11 @@ jobs:
       - run: cat dprint.json | gh-action-multiline -name=json | tee -a "$GITHUB_OUTPUT"
         id: have_output
       - run: test '120' = "${{ fromJson(steps.have_output.outputs.json).prettier.printWidth }}"
+      - uses: actions/upload-artifact@v3
+        with:
+          name: gh-action-multiline
+          path: dist/gh-action-multiline_linux_amd64_v1/gh-action-multiline
+          if-no-files-found: error
   lint:
     runs-on: ubuntu-latest
     steps:
