--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -45,9 +45,9 @@ jobs:
       - run: task build
       - run: tree dist
       - run: readlink -f ./dist/gh-action-multiline_linux_amd64_v1 >> "$GITHUB_PATH"
-      - run: cat dprint.json | gh-action-multiline -name=json | tee -a "$GITHUB_OUTPUT"
+      - run: gh-action-multiline -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
         id: have_output
-      - run: test '120' = "${{ fromJson(steps.have_output.outputs.json).prettier.printWidth }}"
+      - run: test '6174' = "${{ fromJson(steps.have_output.outputs.example_json).nested.kaprekar_constant }}"
       - uses: actions/upload-artifact@v3
         with:
           name: gh-action-multiline
