--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Test above
         run: |
           test '42' = "${{ fromJson(steps.have_multiple_outputs.outputs.example_json).the_answer }}"
-          test 'looks_like_a_name=and_looks_like_the_value' = "${{ fromJson(steps.have_multiple_outputs.outputs.example_json).strange_text }}"
+          test 'looks_like_a_name=and_looks_like_the_value' = "${{ steps.have_multiple_outputs.outputs.strange_text }}"
       - uses: actions/upload-artifact@v3
         with:
           name: gh-action-multiline
