Use Nix flake and make it installable with `go install` and `nix run`

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -11,9 +11,12 @@ tasks:
   install:
     cmds:
       - go install -ldflags "-X main.commit=$(git rev-parse HEAD) -X main.date=$(date --iso-8601)"
+  build:preview:
+    cmds:
+      - goreleaser build --snapshot --single-target --clean --output dist/gh-action-multiline
   build:
     cmds:
-      - goreleaser build --snapshot --single-target --clean
+      - go build -o ./dist/gh-action-multiline ./cmd/gh-action-multiline
   test:
     cmds:
       - go test
@@ -29,7 +32,7 @@ tasks:
       - go vet
       - goreleaser check
       - nixpkgs-fmt --check ./*.nix
-  versions:
+  deps:
     cmds:
       - nix --version
       - task --version
