--- a/.github/workflows/ci-nix.yml
+++ b/.github/workflows/ci-nix.yml
@@ -1,15 +1,17 @@
-name: CI - Development Environment
+name: CI - Nix
 on:
   push:
     branches: [main]
     paths:
-      - '.github/workflows/ci-dev.yml'
+      - '.github/workflows/ci-nix.yml'
       - '*.nix'
+      - 'flake.*'
       - 'Taskfile.yml'
   pull_request:
     paths:
-      - '.github/workflows/ci-dev.yml'
+      - '.github/workflows/ci-nix.yml'
       - '*.nix'
+      - 'flake.*'
       - 'Taskfile.yml'
   schedule:
     # Every 10:42 JST
@@ -25,8 +27,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: DeterminateSystems/nix-installer-action@v4
       - uses: DeterminateSystems/magic-nix-cache-action@v2
-      - run: nix-build
-      - name: Log current versions
-        run: nix-shell --run 'task versions'
-      - name: Run main task
-        run: nix-shell --run 'task'
+      - run: nix flake check
+      - run: nix develop --command echo 'This step should be done before any other "nix develop" steps because of measuring Nix build time'
+      - run: nix develop --command task deps
+      - run: nix develop --command task
+      - run: nix run . -- --version
