--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI - Go
 
 on:
   push:
@@ -44,7 +44,7 @@ jobs:
           install-only: true
       - run: task build
       - run: tree dist
-      - run: readlink -f ./dist/gh-action-multiline_linux_amd64_v1 >> "$GITHUB_PATH"
+      - run: readlink -f ./dist/bin >> "$GITHUB_PATH"
       - run: gh-action-multiline -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
         id: have_output
       - run: test '6174' = "${{ fromJson(steps.have_output.outputs.example_json).nested.kaprekar_constant }}"
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: gh-action-multiline
-          path: dist/gh-action-multiline_linux_amd64_v1/gh-action-multiline
+          path: dist/bin/gh-action-multiline
           if-no-files-found: error
   lint:
     runs-on: ubuntu-latest
