Integrate typos instead of CSpell

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,7 +3,7 @@
     "golang.go",
     "github.vscode-github-actions",
     "editorconfig.editorconfig",
-    "streetsidesoftware.code-spell-checker",
+    "tekumara.typos-vscode",
     "dprint.dprint",
     "jnoortheen.nix-ide",
     "task.vscode-task"
