--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,8 +1,10 @@
 name: Lint
+
 on:
   push:
     branches: [main]
   pull_request:
+
 jobs:
   dprint:
     timeout-minutes: 15
@@ -10,3 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.2
+        with:
+          # Keep same version as *.nix
+          dprint-version: '0.36.1'
+
+  typos:
+    timeout-minutes: 15
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      # Keep same version as *.nix
+      - uses: crate-ci/typos@v1.15.0
+        with:
+          files: |
+            .
+            .github
+            .vscode
