--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -34,6 +34,7 @@ tasks:
       - goreleaser check
       - typos . .github .vscode
       - nixpkgs-fmt --check ./*.nix
+      - actionlint
   deps:
     cmds:
       - nix --version
@@ -42,3 +43,4 @@ tasks:
       - dprint --version
       - typos --version
       - goreleaser --version
+      - actionlint --version
