--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache-dependency-path: 'go.sum'
-      - run: go test
-      - run: go build -v -race
+      - run: go test ./...
+      - run: go build ./... -v -race
   usage:
     runs-on: ubuntu-latest
     steps:
@@ -72,6 +72,6 @@ jobs:
           go-version-file: 'go.mod'
           cache-dependency-path: 'go.sum'
       - name: lint
-        run: go vet
+        run: go vet ./...
       - name: format
-        run: go fmt && git add --intent-to-add . && git diff --exit-code
+        run: go fmt ./... && git add --intent-to-add . && git diff --exit-code
