--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -23,7 +23,7 @@ jobs:
           go-version-file: 'go.mod'
           cache-dependency-path: 'go.sum'
       - run: go test ./...
-      - run: go build ./... -v -race
+      - run: go build -v -race ./...
   usage:
     runs-on: ubuntu-latest
     steps:
