--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,16 +13,16 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dprint/check@v2.2
         with:
-          # Keep same version as *.nix
-          dprint-version: '0.36.1'
+          # Keep same version as used in *.nix
+          dprint-version: '0.40.2'
 
   typos:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # Keep same version as *.nix
-      - uses: crate-ci/typos@v1.15.0
+      # Keep same version as used in *.nix
+      - uses: crate-ci/typos@v1.16.8
         with:
           files: |
             .
