--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -45,13 +45,13 @@ jobs:
       - run: task build
       - run: tree dist
       - run: readlink -f ./dist/bin >> "$GITHUB_PATH"
-      - run: gh-action-multiline -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
+      - run: gh-action-escape -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
         id: have_output
       - run: test '6174' = "${{ fromJson(steps.have_output.outputs.example_json).nested.kaprekar_constant }}"
       - name: Output multiple key-value pairs in a step
         run: |
-          gh-action-multiline -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
-          gh-action-multiline -name=strange_text < examples/strange.txt | tee -a "$GITHUB_OUTPUT"
+          gh-action-escape -name=example_json < examples/example.json | tee -a "$GITHUB_OUTPUT"
+          gh-action-escape -name=strange_text < examples/strange.txt | tee -a "$GITHUB_OUTPUT"
         id: have_multiple_outputs
       - name: Test above
         run: |
@@ -59,8 +59,8 @@ jobs:
           test "looks_like_a_name=and_looks_like_the_value" = "${{ steps.have_multiple_outputs.outputs.strange_text }}"
       - uses: actions/upload-artifact@v3
         with:
-          name: gh-action-multiline
-          path: dist/bin/gh-action-multiline
+          name: gh-action-escape
+          path: dist/bin/gh-action-escape
           if-no-files-found: error
   lint:
     runs-on: ubuntu-latest
