--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -9,7 +9,7 @@ before:
 builds:
   - env:
       - CGO_ENABLED=0
-    main: ./cmd/gh-action-multiline
+    main: ./cmd/gh-action-escape
     goos:
       - linux
       # - windows
