--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -13,10 +13,10 @@ tasks:
       - go install -ldflags "-X main.commit=$(git rev-parse HEAD) -X main.date=$(date --iso-8601)"
   build:preview:
     cmds:
-      - goreleaser build --snapshot --single-target --clean --output dist/gh-action-multiline
+      - goreleaser build --snapshot --single-target --clean --output dist/gh-action-escape
   build:
     cmds:
-      - go build -o ./dist/bin/gh-action-multiline ./cmd/gh-action-multiline
+      - go build -o ./dist/bin/gh-action-escape ./cmd/gh-action-escape
   test:
     cmds:
       - go test ./...
