--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -24,15 +24,15 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v4
-      - name: Install gh-action-multiline
-        run: curl -fsSL https://raw.githubusercontent.com/kachick/gh-action-multiline/${{ github.sha }}/scripts/install-in-github-action.sh | sh -s v0.1.1
+      - name: Install gh-action-escape
+        run: curl -fsSL https://raw.githubusercontent.com/kachick/gh-action-escape/${{ github.sha }}/scripts/install-in-github-action.sh | sh -s v0.2.0
       - name: Set the value in bash
         id: step_output
-        run: cat examples/example.json | gh-action-multiline -name=example_json >> "$GITHUB_OUTPUT"
+        run: cat examples/example.json | gh-action-escape -name=example_json >> "$GITHUB_OUTPUT"
       - name: Use product in a before step
         run: test '6174' = "${{ fromJson(steps.step_output.outputs.example_json).nested.kaprekar_constant }}"
       - name: Set the value in bash
         id: step_env
-        run: cat examples/example.json | gh-action-multiline -name=EXAMPLE_JSON >> "$GITHUB_ENV"
+        run: cat examples/example.json | gh-action-escape -name=EXAMPLE_JSON >> "$GITHUB_ENV"
       - name: Use product in a before step
         run: test '42' = "${{ fromJson(env.EXAMPLE_JSON).the_answer }}"
