--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,39 +1,25 @@
-name: goreleaser
+name: release
 
 on:
   push:
     tags:
-      - '*'
+      - 'v*'
   workflow_dispatch:
 
 permissions:
   contents: write
-  pull-requests: write
   checks: read # For private repositories
   actions: read # For private repositories
 
 jobs:
-  goreleaser:
+  release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Set up Go
-        uses: actions/setup-go@v4
+      - uses: cli/gh-extension-precompile@v1
         with:
-          go-version-file: 'go.mod'
-          cache-dependency-path: 'go.sum'
-      # TODO: Enable after https://github.com/kachick/wait-other-jobs/issues/474
-      # - name: Wait other jobs
-      #   uses: kachick/wait-other-jobs@v1.3.0
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v5
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          distribution: goreleaser
-          version: 'v1.21.2' # selfup { "regex": "\\d[^']+", "script": "goreleaser --version | grep 'GitVersion:' | tr -s ' ' | cut -d ' ' -f 2" }
-          args: release --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # TODO: Use `go.mod` if https://github.com/cli/gh-extension-precompile/issues/46 available
+          go_version: '1.21'
