--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -8,15 +8,9 @@ tasks:
       - task: lint
       - task: test
       - task: build
-  install:
-    cmds:
-      - go install -ldflags "-X main.commit=$(git rev-parse HEAD) -X main.date=$(date --iso-8601)"
-  build:preview:
-    cmds:
-      - goreleaser build --snapshot --single-target --clean --output dist/gh-action-escape
   build:
     cmds:
-      - go build -o ./dist/bin/gh-action-escape ./cmd/gh-action-escape
+      - go build -ldflags "-X main.commit=$(git rev-parse HEAD) -X main.date=$(date --iso-8601)" -o gh-action-escape ./cmd/gh-action-escape
   test:
     cmds:
       - go test ./...
@@ -31,7 +25,6 @@ tasks:
     cmds:
       - dprint check
       - go vet ./...
-      - goreleaser check
       - typos . .github .vscode
       - nixpkgs-fmt --check ./*.nix
   deps:
@@ -41,4 +34,3 @@ tasks:
       - go version
       - dprint --version
       - typos --version
-      - goreleaser --version
