--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -25,4 +25,5 @@ jobs:
           # The PURL prefix is got from following command
           # `gh api -H "Accept: application/vnd.github+json" -H "X-GitHub-Api-Version: 2022-11-28" /repos/kachick/gh-action-escape/dependency-graph/compare/87d736b80a8a254bcac003d97e0b84712176b04f...5ba877ff1048d5fedcc6758484623eb67737f0fb`
           # Not found in https://github.com/package-url/packageurl-js
-          allow-dependencies-licenses: pkg:githubactions/DeterminateSystems/nix-installer-action@4
+          # And [the version is optional](https://github.com/package-url/purl-spec/blob/346589846130317464b677bc4eab30bf5040183a/README.rst#L91), basically removing will fit here
+          allow-dependencies-licenses: pkg:githubactions/DeterminateSystems/nix-installer-action
