--- a/.github/workflows/ci-e2e-api.yml
+++ b/.github/workflows/ci-e2e-api.yml
@@ -18,6 +18,11 @@ on:
     - cron: '42 1 * * *'
   workflow_dispatch:
 
+defaults:
+  run:
+    # https://pubs.opengroup.org/onlinepubs/009695399/utilities/set.html
+    shell: bash -Ceuo pipefail {0}
+
 jobs:
   usage:
     runs-on: ubuntu-latest
@@ -25,14 +30,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Install gh-action-escape
-        run: curl -fsSL https://raw.githubusercontent.com/kachick/gh-action-escape/${{ github.sha }}/scripts/install-in-github-action.sh | sh -s v0.2.0
+        # Refers released versions, so test the detail HEAD logins in another workflow
+        run: curl -fsSL https://raw.githubusercontent.com/${{ github.repository }}/${{ github.sha }}/scripts/install-in-github-action.sh | sh -s v0.2.0
       - name: Set the value in bash
         id: step_output
-        run: cat examples/example.json | gh-action-escape -name=example_json >> "$GITHUB_OUTPUT"
+        run: cat examples/example.json | gh-action-escape -name=example_json | tee -a "$GITHUB_OUTPUT"
       - name: Use product in a before step
         run: test '6174' = "${{ fromJson(steps.step_output.outputs.example_json).nested.kaprekar_constant }}"
       - name: Set the value in bash
         id: step_env
-        run: cat examples/example.json | gh-action-escape -name=EXAMPLE_JSON >> "$GITHUB_ENV"
+        run: cat examples/example.json | gh-action-escape -name=EXAMPLE_JSON | tee -a "$GITHUB_ENV"
       - name: Use product in a before step
         run: test '42' = "${{ fromJson(env.EXAMPLE_JSON).the_answer }}"
