--- a/.github/workflows/ci-e2e-values.yml
+++ b/.github/workflows/ci-e2e-values.yml
@@ -34,21 +34,32 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache-dependency-path: 'go.sum'
-      - name: Install gh-action-escape
-        run: go install
+      - name: Install Task
+        uses: arduino/setup-task@v2
+        with:
+          version: '3.x' # selfup { "regex": "\\d[^']+", "script": "task --version | cut -d ' ' -f 3" }
+      - name: Install GoReleaser
+        uses: goreleaser/goreleaser-action@v5
+        with:
+          install-only: true
+          version: 'v1.24.0' # selfup { "regex": "\\d[^']+", "script": "goreleaser --version | grep 'GitVersion:' | tr -s ' ' | cut -d ' ' -f 2" }
+      - name: Build and make sure no errors
+        run: |
+          task build
+          ./dist/bin/gh-action-escape --version
       - name: Set the value in bash
         id: step_output
-        run: cat examples/example.json | ${GOPATH:-"$HOME/go"}/bin/gh-action-escape -name=example_json | tee -a "$GITHUB_OUTPUT"
+        run: cat examples/example.json | ./dist/bin/bin/gh-action-escape -name=example_json | tee -a "$GITHUB_OUTPUT"
       - name: Use product in a before step
         run: test '6174' = "${{ fromJson(steps.step_output.outputs.example_json).nested.kaprekar_constant }}"
       - name: Set the value in bash
         id: step_env
-        run: cat examples/example.json | ${GOPATH:-"$HOME/go"}/bin/gh-action-escape -name=EXAMPLE_JSON | tee -a "$GITHUB_ENV"
+        run: cat examples/example.json | ./dist/bin/bin/gh-action-escape -name=EXAMPLE_JSON | tee -a "$GITHUB_ENV"
       - name: Use product in a before step
         run: test '42' = "${{ fromJson(env.EXAMPLE_JSON).the_answer }}"
       - name: When given string ending with new line
         id: step_echo
-        run: echo 'echo outputs as line' | ${GOPATH:-"$HOME/go"}/bin/gh-action-escape -name=echo | tee -a "$GITHUB_OUTPUT"
+        run: echo 'echo outputs as line' | ./dist/bin/bin/gh-action-escape -name=echo | tee -a "$GITHUB_OUTPUT"
       - name: Use product in a before step
         run: test "echo outputs as line\n" = "${{ steps.step_echo.outputs.echo }}"
       # TODO
