--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -36,12 +36,12 @@ jobs:
       - name: Install Task
         uses: arduino/setup-task@v2
         with:
-          version: 3.x
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          version: '3.x' # selfup { "regex": "\\d[^']+", "script": "task --version | cut -d ' ' -f 3" }
       - name: Install GoReleaser
         uses: goreleaser/goreleaser-action@v5
         with:
           install-only: true
+          version: 'v1.24.0' # selfup { "regex": "\\d[^']+", "script": "goreleaser --version | grep 'GitVersion:' | tr -s ' ' | cut -d ' ' -f 2" }
       - run: task build
       - run: tree dist
       - run: readlink -f ./dist/bin >> "$GITHUB_PATH"
