--- a/.github/workflows/ci-e2e-values.yml
+++ b/.github/workflows/ci-e2e-values.yml
@@ -59,9 +59,24 @@ jobs:
         run: test '42' = "${{ fromJson(env.EXAMPLE_JSON).the_answer }}"
       - name: When given string ending with new line
         id: step_echo
-        run: echo 'echo outputs as line' | ./dist/bin/gh-action-escape -name=echo | tee -a "$GITHUB_OUTPUT"
-      - name: Append line-end even if already having
-        run: test "$(echo -n "outputs as line\n")" = "${{ steps.step_echo.outputs.echo }}"
-      # TODO
-      # - name: And test chomp flag
-      #   run: test 'echo outputs as line' = "${{ steps.step_echo.outputs.echo }}"
+        run: |
+          echo -n 'echo outputs as line' | ./dist/bin/gh-action-escape -name=n0 | tee -a "$GITHUB_OUTPUT"
+          echo 'echo outputs as line' | ./dist/bin/gh-action-escape -name=n1 | tee -a "$GITHUB_OUTPUT"
+          echo "echo outputs as line\n" | ./dist/bin/gh-action-escape -name=n2 | tee -a "$GITHUB_OUTPUT"
+          echo -n "echo outputs as line\n\n\n" | ./dist/bin/gh-action-escape -name=n3 | tee -a "$GITHUB_OUTPUT"
+      - name: 'Append line-end with the heredoc restriction - https://askubuntu.com/questions/981741/is-there-something-similar-to-echo-n-in-heredoc-eof'
+        run: |
+          ruby -e 'size = ARGV[1].slice(/\n*\z/).size; raise size.to_s if size != Integer(ARGV[2])' \
+            "${{ steps.step_echo.outputs.n0 }}" 1
+      - name: 'FIXME: Do not add line-end if it already having'
+        run: |
+          ruby -e 'size = ARGV[1].slice(/\n*\z/).size; raise size.to_s if size != Integer(ARGV[2])' \
+            "${{ steps.step_echo.outputs.n1 }}" 1
+      - name: 'FIXME: Trim line-end if it already having'
+        run: |
+          ruby -e 'size = ARGV[1].slice(/\n*\z/).size; raise size.to_s if size != Integer(ARGV[2])' \
+            "${{ steps.step_echo.outputs.n2 }}" 1
+      - name: 'FIXME: Trim line-end just once even if it has multiple'
+        run: |
+          ruby -e 'size = ARGV[1].slice(/\n*\z/).size; raise size.to_s if size != Integer(ARGV[2])' \
+            "${{ steps.step_echo.outputs.n3 }}" 2
