Integrate wait-other-jobs for release action

--- a/.github/workflows/merge-bot-pr.yml
+++ b/.github/workflows/merge-bot-pr.yml
@@ -34,6 +34,12 @@ jobs:
         uses: kachick/wait-other-jobs@v3
         with:
           skip-same-workflow: 'true'
+          skip-list: |
+            [
+              {
+                "workflowFile": "release.yml"
+              }
+            ]
         timeout-minutes: 10
       - name: Approve and merge
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --squash "$PR_URL"
@@ -51,6 +57,12 @@ jobs:
         uses: kachick/wait-other-jobs@v3
         with:
           skip-same-workflow: 'true'
+          skip-list: |
+            [
+              {
+                "workflowFile": "release.yml"
+              }
+            ]
         timeout-minutes: 20
       - name: Approve and merge
         run: gh pr review --approve "$PR_URL" && gh pr merge --auto --delete-branch --squash "$PR_URL"
