--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,9 +25,16 @@ jobs:
         with:
           go-version-file: 'go.mod'
           cache-dependency-path: 'go.sum'
-      # TODO: Enable after https://github.com/kachick/wait-other-jobs/issues/474
-      # - name: Wait other jobs
-      #   uses: kachick/wait-other-jobs@v1.3.0
+      - name: Wait other jobs
+        uses: kachick/wait-other-jobs@v3
+        with:
+          skip-list: |
+            [
+              {
+                "workflowFile": "merge-bot-pr.yml"
+              }
+            ]
+        timeout-minutes: 10
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
         if: startsWith(github.ref, 'refs/tags/')
