--- a/.github/workflows/ci-go.yml
+++ b/.github/workflows/ci-go.yml
@@ -14,7 +14,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
@@ -25,7 +25,7 @@ jobs:
       - run: go test ./...
       - run: go build -v -race ./...
   usage:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
@@ -63,7 +63,7 @@ jobs:
           path: dist/bin/gh-action-escape
           if-no-files-found: error
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
