--- a/.github/workflows/update-nixpkgs-and-versions-in-ci.yml
+++ b/.github/workflows/update-nixpkgs-and-versions-in-ci.yml
@@ -14,7 +14,7 @@ jobs:
     uses: kachick/selfup/.github/workflows/reusable-bump-flake-lock-and-selfup.yml@v1.1.3
     if: (github.event.sender.login == 'kachick') || (github.event_name != 'pull_request')
     with:
+      app_id: ${{ vars.APP_ID }}
       dry-run: ${{ github.event_name == 'pull_request' }}
     secrets:
-      APP_ID: ${{ secrets.APP_ID }}
       APP_PRIVATE_KEY: ${{ secrets.APP_PRIVATE_KEY }}
