--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,4 +1,5 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
+version: 2
+
 # Make sure to check the documentation at https://goreleaser.com
 before:
   hooks:
@@ -31,8 +32,6 @@ archives:
         format: zip
 checksum:
   name_template: 'checksums.txt'
-snapshot:
-  name_template: '{{ incpatch .Version }}-next'
 changelog:
   sort: asc
   filters:
